--- a/css/contact.css
+++ b/css/contact.css
@@ -67,6 +67,14 @@ textarea {
   background-color: var(--yellow);
   border: none;
   font-weight: 700;
+  transition: all 0.5s ease-in-out;
+}
+
+.contact__content__text__button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
 .contact__icons {
