--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,32 @@ header {
   line-height: 70px;
 }
 
+@keyframes appearWords {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-25px);
+    color: blueviolet;
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+#header__text--fir {
+  animation: appearWords 2s ease-in-out;
+}
+
+#header__text--sec {
+  animation: appearWords 3s ease-in-out;
+}
+
+#header__text--thi {
+  animation: appearWords 4.5s ease-in-out;
+}
+
 .header__text__subtitle {
   font-size: 11px;
   font-weight: 700;
@@ -28,4 +54,12 @@ header {
   height: 50px;
   border: none;
   background-color: var(--yellow);
+  transition: all 0.5s ease-in-out;
+}
+
+.header__text > button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
