--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -17,6 +17,7 @@
 .portfolio__menu__division > span {
   margin-left: 10px;
   padding: 5px 15px;
+  transition: background-color 0.5s ease-in-out;
 }
 
 .portfolio__menu__division > span:nth-child(1) {
@@ -25,6 +26,7 @@
 
 .portfolio__menu__division > span:hover {
   background-color: var(--yellow);
+  cursor: pointer;
 }
 
 .portfolio__images {
@@ -50,4 +52,15 @@
   border: none;
   font-weight: 700;
   background-color: var(--yellow);
+  transition: all 0.5s ease-in-out;
+}
+
+.portfolio__button > button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
+
+.portfolio__menu__see:hover {
+  cursor: pointer;
 }
