add Css animations

--- a/css/about.css
+++ b/css/about.css
@@ -2,6 +2,7 @@
   font-size: var(--title-size);
   font-weight: var(--title-weight);
   margin-bottom: 70px;
+  animation: appearImage 1s ease-in-out;
 }
 
 .about__title__subtitle {
@@ -9,12 +10,28 @@
   font-weight: 700;
   line-height: 20px;
   margin-bottom: 70px;
+  animation: appearImage 2s ease-in-out;
 }
 
 .about__contents {
   display: flex;
   justify-content: space-between;
   margin: 0;
+  animation: appearImage 3s ease-in-out;
+}
+
+@keyframes appearImage {
+  0% {
+    transform: none;
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  100% {
+    transform: none;
+  }
 }
 
 .about__image__title {
