--- a/css/contact.css
+++ b/css/contact.css
@@ -2,6 +2,7 @@
   font-size: var(--title-size);
   font-weight: var(--title-weight);
   margin-bottom: 70px;
+  animation: appearImage 1s ease-in-out;
 }
 
 .contact__title__subtitle {
@@ -9,11 +10,27 @@
   font-weight: 700;
   line-height: 20px;
   margin-bottom: 70px;
+  animation: appearImage 2s ease-in-out;
 }
 
 .contact__content {
   display: flex;
   justify-content: space-between;
+  animation: appearImage 3s ease-in-out;
+}
+
+@keyframes appearImage {
+  0% {
+    transform: none;
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(-30px);
+    opacity: 0;
+  }
+  100% {
+    transform: none;
+  }
 }
 
 .contact__content__text__title {
@@ -81,6 +98,7 @@ textarea {
   display: flex;
   justify-content: space-between;
   padding: 80px 260px;
+  animation: appearImage 4s ease-in-out;
 }
 
 .contact__icons__icon {
