--- a/css/nav.css
+++ b/css/nav.css
@@ -4,9 +4,23 @@
   margin-bottom: 160px;
 }
 
+@keyframes rotateLogo {
+  0% {
+    transform: none;
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
 .navBar__logo {
   width: 80px;
   height: 55px;
+}
+
+.navBar__logo:hover {
+  cursor: pointer;
+  animation: rotateLogo 1.5s linear infinite;
 }
 
 .navBar__menu > span {
