--- a/css/footer.css
+++ b/css/footer.css
@@ -3,18 +3,18 @@ body {
 }
 
 .footer {
-  left: 0;
-  bottom: 0;
-  width: 1900px;
+  width: 100vw;
   height: 180px;
   background-color: black;
   color: white;
-  position: absolute;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 370px;
+  padding: 0px 19vw;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .footer__logo {
