--- a/css/mediaquery/smallscreen.css
+++ b/css/mediaquery/smallscreen.css
@@ -1,23 +1,24 @@
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 540px) and (max-width: 768px) {
   body {
     padding: 30px 5vw 0px 5vw;
   }
 
   .navBar__logo {
-    width: 48px;
-    height: 33px;
+    width: 40px;
+    height: 27.5px;
   }
 
   .navBar {
     margin-bottom: 96px;
   }
   .navBar__menu > span {
-    margin-left: 64px;
+    margin-left: 40px;
   }
 
   #img1 {
     display: none;
   }
+
   header {
     display: flex;
     flex-direction: column;
@@ -32,9 +33,15 @@
     align-items: center;
   }
 
-  .header__text__subtitle {
-    font-size: 10px;
+  .header__text__title {
+    font-size: 44px;
+    line-height: 40px;
   }
+
+  .portfolio__title {
+    font-size: 40px;
+  }
+
   .portfolio {
     margin-top: 75px;
   }
@@ -42,30 +49,23 @@
     margin-bottom: 150px;
   }
 
-  .portfolio__title,
-  .about__title,
-  .blog__title,
-  .contact__title {
-    font-size: 50px;
-  }
-
   .portfolio__menu {
-    margin-top: 50px;
+    margin-top: 30px;
   }
   .portfolio__images {
-    margin-top: 50px;
+    margin-top: 30px;
   }
 
   #img2,
   #img5 {
-    width: 296px;
-    height: 240px;
+    width: 222px;
+    height: 180px;
   }
 
   #img3,
   #img4 {
-    width: 296px;
-    height: 400px;
+    width: 222px;
+    height: 300px;
   }
 
   #img2,
@@ -83,6 +83,7 @@
   }
 
   .about__title__title {
+    font-size: 40px;
     margin-bottom: 50px;
   }
 
@@ -97,8 +98,8 @@
 
   #man1,
   #man2 {
-    width: 259px;
-    height: 294px;
+    width: 222px;
+    height: 252px;
   }
 
   .about__image--second {
@@ -110,7 +111,7 @@
     height: 49px;
     padding-top: 10.5px;
     padding-left: 17.5px;
-    margin-top: -73px;
+    margin-top: -52px;
   }
 
   .about__image__title--first {
@@ -141,14 +142,23 @@
   .blog {
     margin-bottom: 150px;
   }
+
   .blog__title__title {
     margin-top: 150px;
     margin-bottom: 50px;
+    font-size: 40px;
   }
 
   .blog__title__subtitle {
     margin-bottom: 39px;
     font-size: 10px;
+  }
+
+  #room1,
+  #room2,
+  #room3 {
+    width: 407px;
+    height: 308px;
   }
 
   .blog__images {
@@ -178,8 +188,24 @@
     margin-bottom: 50px;
   }
 
-  #contact--image {
-    display: none;
+  .contact__title__title {
+    font-size: 40px;
+  }
+
+  .contact__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .contact__content__text__button {
+    margin-bottom: 50px;
+  }
+
+  #contact__image {
+    box-sizing: border-box;
+    margin-top: 30px;
+    width: 342px;
+    height: 282px;
   }
 
   .contact__title__title,
@@ -232,11 +258,280 @@
   }
 
   .footer__logo > span {
-    font-size: 10px;
+    font-size: 9px;
     margin-left: 24px;
   }
 
   .footer__btn {
+    font-size: 9px;
+  }
+}
+
+@media screen and (min-width: 360px) and (max-width: 540px) {
+  body {
+    padding: 30px 5vw 0px 5vw;
+  }
+
+  .navBar__logo {
+    width: 40px;
+    height: 27.5px;
+  }
+
+  .navBar {
+    margin-bottom: 96px;
+  }
+  .navBar__menu > span {
+    margin-left: 40px;
+  }
+
+  #img1 {
+    display: none;
+  }
+
+  header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header__text {
+    margin-top: 0px;
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header__text__title {
+    font-size: 44px;
+    line-height: 40px;
+  }
+
+  .portfolio__title {
+    font-size: 40px;
+  }
+
+  .portfolio {
+    margin-top: 75px;
+  }
+  .portfolio__button {
+    margin-bottom: 150px;
+  }
+
+  .portfolio__menu {
+    margin-top: 30px;
+  }
+  .portfolio__images {
+    margin-top: 30px;
+  }
+
+  #img2,
+  #img5 {
+    width: 222px;
+    height: 180px;
+  }
+
+  #img3,
+  #img4 {
+    width: 222px;
+    height: 300px;
+  }
+
+  #img2,
+  #img4,
+  #img6 {
+    margin-bottom: 15px;
+  }
+
+  .portfolio__images--second {
+    margin: 0px 15px;
+  }
+
+  .portfolio__images--third {
+    display: none;
+  }
+
+  .about__title__title {
+    font-size: 40px;
+    margin-bottom: 50px;
+  }
+
+  .about__title__subtitle {
     font-size: 10px;
+  }
+
+  .about__contents {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #man1,
+  #man2 {
+    width: 222px;
+    height: 252px;
+  }
+
+  .about__image--second {
+    margin: 0px 15px;
+  }
+
+  .about__image__title {
+    width: 175px;
+    height: 49px;
+    padding-top: 10.5px;
+    padding-left: 17.5px;
+    margin-top: -52px;
+  }
+
+  .about__image__title--first {
+    margin-bottom: 7px;
+    font-size: 13px;
+  }
+
+  .about__text {
+    width: 500px;
+    height: 200px;
+    padding: 50px 0px;
+  }
+  .about__text > h3 {
+    margin-bottom: 20px;
+    font-size: 25px;
+  }
+
+  .about__text > h5 {
+    font-size: 12px;
+    line-height: 20px;
+  }
+
+  .about__text > h6 {
+    font-size: 12px;
+    margin-top: 35px;
+  }
+
+  .blog {
+    margin-bottom: 150px;
+  }
+
+  .blog__title__title {
+    margin-top: 150px;
+    margin-bottom: 50px;
+    font-size: 40px;
+  }
+
+  .blog__title__subtitle {
+    margin-bottom: 39px;
+    font-size: 10px;
+  }
+
+  #room1,
+  #room2,
+  #room3 {
+    width: 407px;
+    height: 308px;
+  }
+
+  .blog__images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .blog__images--second {
+    margin: 0px;
+  }
+
+  .blog__images__text {
+    padding: 20px 0px 30px 0px;
+  }
+
+  .blog__images__text > h5,
+  .blog__images__text > h6 {
+    line-height: 20px;
+  }
+
+  .blog__images__text > h3 {
+    font-size: 15px;
+    margin-bottom: 15px;
+  }
+
+  .contact {
+    margin-bottom: 50px;
+  }
+
+  .contact__title__title {
+    font-size: 40px;
+  }
+
+  .contact__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .contact__content__text__button {
+    margin-bottom: 50px;
+  }
+
+  #contact__image {
+    box-sizing: border-box;
+    margin-top: 30px;
+    width: 342px;
+    height: 282px;
+  }
+
+  .contact__title__title,
+  .contact__title__subtitle {
+    margin-bottom: 50px;
+  }
+
+  .contact__title__subtitle {
+    font-size: 10px;
+  }
+
+  .input--name,
+  .input--email,
+  .input--message {
+    width: 456px;
+  }
+
+  .input--name > input,
+  .input--email > input {
+    width: 432px;
+    margin-left: 30px;
+  }
+
+  textarea {
+    width: 432px;
+    height: 100px;
+    padding: 10px;
+    margin-left: 30px;
+  }
+
+  .contact__icons {
+    padding: 70px 0px;
+  }
+
+  .contact__icons__icon > h6 {
+    font-size: 12px;
+  }
+
+  .contact__sns {
+    margin-bottom: 70px;
+  }
+
+  .contact__sns > i {
+    margin: 0px 35px 70px 35px;
+  }
+
+  .footer__logo > img {
+    width: 72px;
+    height: 41.6px;
+  }
+
+  .footer__logo > span {
+    font-size: 9px;
+    margin-left: 24px;
+  }
+
+  .footer__btn {
+    font-size: 9px;
   }
 }
