--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -85,6 +85,7 @@
   transform: scale(1.1);
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  cursor: pointer;
 }
 
 .portfolio__menu__see:hover {
