--- a/css/mediaquery/smallscreen.css
+++ b/css/mediaquery/smallscreen.css
@@ -341,6 +341,8 @@
     font-size: 9px;
   }
   .portfolio__menu {
+    display: flex;
+    flex-direction: column;
     margin-top: 30px;
     font-size: 9px;
   }
@@ -348,6 +350,11 @@
     margin-left: 3px;
     padding: 2px 6px;
   }
+
+  .portfolio__menu__see {
+    margin-top: 15px;
+  }
+
   .portfolio__images {
     margin-top: 30px;
   }
